child comment spacing fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -272,6 +272,7 @@ figure {
   @include clearfix();
   margin: 1em 0;
   position: relative;
+  margin-top: 4em;
   margin-bottom: 4em;
   font-size: 0.9em;
 
